//
//  LoginConstants.swift
//  MoviesApp
//
//  Created by Dinesh Kumar on 14/01/24.
//

import Foundation

struct LoginConstants {

    struct AccessibilityIdentifiers {
        static let loginButton = "loginButton"
        static let loginUserNameInput = "loginUserNameInput"
        static let loginPasswordInput = "loginPasswordInput"
    }
}
