//
//  MoviesConstants.swift
//  MoviesApp
//
//  Created by Dinesh Kumar on 14/01/24.
//

import Foundation

struct MoviesConstants {

    struct AccessibilityIdentifiers {
        static let moviesTableView = "moviesTableView"
        static let movieNameLabel = "movieNameLabel_"
        static let movieSummaryLabel = "movieSummaryLabel_"
        static let ratingLabel = "ratingLabel_"
        static let releaseDateLabel = "releaseDateLabel_"
        static let movieThumbnailImage = "movieThumbnailImage_"
    }
}
